--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         </header>
 
             <section class="inicio">
-              
+              tudo bem ok
             </section>
 
             
