--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ section {
         
                     <ul id="nav_list">
                         <li class="nav-item active">
-                            <a href="#home">Início</a>
+                            <a href="#home">principal</a>
                         </li>
                         <li class="nav-item">
                             <a href="#menu">Cardápio</a>
