--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ section {
                             <a href="#home">principal</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#menu">Cardápio</a>
+                            <a href="#menu">Lista de produtos</a>
                         </li>
                         <li class="nav-item">
                             <a href="#testimonials">Avaliações</a>
