--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ section {
                     <div id="cta">
                         <h1 class="title">
                             O sabor que vai até
-                            <span>você</span>
+                            <span>você queridos</span>
                         </h1>
         
                         <p class="description">
