--- a/login.html
+++ b/login.html
@@ -54,6 +54,7 @@ body{
         <input type="password" placeholder="Senha">
         <br><br>
         <button>Login</button>
+        <button><a href="cadastrocliente.html"></a></button>
 
     </div>
 </body>
