--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <li><a href="">Inicio</a></li>
                 <li><a href="">Meus pedidos</a></li>
                 <li><a href="">Seja nosso parceiro</a></li>
-              <li> <a href=""  >Login</a></li>
+              <li> <a href="" >Login</a></li>
               <li><i class="fa-solid fa-magnifying-glass"> <input type="text" class="searchBar" placeholder="Pesquisar"></i></li>
             </ul> 
             
@@ -109,7 +109,7 @@
         <img src="imagens/champs.png" alt="Champs">
         <h2>Champs</h2>
         
-        <a href="#">Saiba mais</a>
+        <a href="champs.html">Saiba mais</a>
       </div>
       <div class="restaurant">
         <img src="imagens/champs.png" alt="Champs">
