--- a/cadastroempresa.html
+++ b/cadastroempresa.html
@@ -8,7 +8,7 @@
   <style>
   body {
     font-family: Arial, sans-serif;
-    background-color: gray
+    background-color: rgb(175, 109, 185)
     background-image: linear-gradient(45deg, rgb(255, 255, 255), rgb(200, 104, 224));
    
 }
