--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   
     <head>
         <title>Dle eats</title>
+        <meta name="viewport" content="width=device-width">
         <meta charset="utf-8">
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
         
