--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                                         <!-- Producto 1 -->
                                         <div class="card-product">
                                                 <div class="container-img">
-                                                        <img src="imagens/Hamburger.jpeg" alt="whopper" />
+                                                        <img src="imagens/Hamburguer.jpeg" alt="whopper" />
                                                         <span class="disconto">-13%</span>
                                                         <div class="button-group">
                                                                 <span>
@@ -159,7 +159,7 @@
                                         <div class="card-product">
                                                 <div class="container-img">
                                                         <img
-                                                                src="imagens/Hambgr2.jpeg"
+                                                                src="imagens/Hamburgu.jpeg"
                                                                 alt="chicken"
                                                         />
                                                         <span class="disconto">-22%</span>
