Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
         <img src="imagens/burgerking.png" alt="Champs">
         <h2>Burger King</h2>
         
-        <a href="#">Saiba mais</a>
+        <a href="burgerking.html">Saiba mais</a>
       </div>
       <div class="restaurant">
         <img src="imagens/chiquinho.png" alt="Chiquinho Sorvetes">
