Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
                                         <div class="container-user">
                                           <a href="login.html"> <i class="fa-solid fa-user"></i></a>
-                                                <a href="carrinho"><i class="fa-solid fa-basket-shopping"></i></a>
+                                                <a href="carrinho.html"><i class="fa-solid fa-basket-shopping"></i></a>
                                                 <div class="content-shopping-cart">
                                                         <span class="text">Carrinho</span>
                                                         
