Atualizar o carrinho.html

--- a/carrinho.html
+++ b/carrinho.html
@@ -220,5 +220,10 @@
                                 </div>
                         </div>
                 </footer>
+                <script
+                        src="https://kit.fontawesome.com/81581fb069.js"
+                        crossorigin="anonymous"
+                ></script>
   </body>
+            
 </html>
