--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                                         <!-- Producto 1 -->
                                         <div class="card-product">
                                                 <div class="container-img">
-                                                        <img src="imagegrns/Hamburguer.jpeg" alt="whopper" />
+                                                        <img src="imagens/Hamburguer.jpeg" alt="whopper" />
                                                         <span class="disconto">-13%</span>
                                                         <div class="button-group">
                                                                 <span>
