Atualizar o Burgerking.html

--- a/Burgerking.html
+++ b/Burgerking.html
@@ -103,7 +103,7 @@ a:hover {
                 </header>
 
                <div class="profile">
-        <img src="imagens/burgerking.jpg" alt="Avatar do Parceiro" class="avatar">
+        <img src="imagens/burgerking.png" alt="Avatar do Parceiro" class="avatar">
         <div class="profile-info">
             <h1> Burger King</h1>
             <p>Burger King, muitas vezes abreviado como BK, é uma rede de restaurantes especializada em fast-food, fundada nos Estados Unidos por James McLamore e David Edgerton, que abriram a primeira unidade em Miami, Flórida.</p>
@@ -118,7 +118,7 @@ a:hover {
                                         <!-- Producto 1 -->
                                         <div class="card-product">
                                                 <div class="container-img">
-                                                        <img src="imagens/hamburge1.jpg" alt="whopper" />
+                                                        <img src="imagens/Hamburguer.jpeg" alt="whopper" />
                                                         <span class="disconto">-13%</span>
                                                         <div class="button-group">
                                                                 <span>
@@ -152,7 +152,7 @@ a:hover {
                                         <div class="card-product">
                                                 <div class="container-img">
                                                         <img
-                                                                src="imagens/hamburger2.jpg"
+                                                                src="imagens/Hambgr 2.jpeg"
                                                                 alt="chicken"
                                                         />
                                                         <span class="disconto">-22%</span>
@@ -185,7 +185,7 @@ a:hover {
                                         </div>
  <div class="card-product">
                                                 <div class="container-img">
-                                                        <img src="imagens/hamburge1.jpg" alt="whopper" />
+                                                        <img src="imagens/Hamburguer.jpeg" alt="whopper" />
                                                         <span class="disconto">-50%</span>
                                                         <div class="button-group">
                                                                 <span>
@@ -218,7 +218,7 @@ a:hover {
                                         
  <div class="card-product">
                                                 <div class="container-img">
-                                                        <img src="imagens/chocolate.jpg" alt="sorvete" />
+                                                        <img src="imagens/Choco shake.jpeg" alt="sorvete" />
                                                         <span class="disconto">-10%</span>
                                                         <div class="button-group">
                                                                 <span>
@@ -250,7 +250,7 @@ a:hover {
                                         </div>
                                    <div class="card-product">
                                                 <div class="container-img">
-                                                        <img src="imagens/hamburge1.jpg" alt="whopper" />
+                                                        <img src="imagens/Hamburguer.jpeg" alt="whopper" />
                                                         <span class="disconto">-50%</span>
                                                         <div class="button-group">
                                                                 <span>
@@ -283,7 +283,7 @@ a:hover {
                                         
  <div class="card-product">
                                                 <div class="container-img">
-                                                        <img src="imagens/chocolate.jpg" alt="sorvete" />
+                                                        <img src="imagens/Choco shake.jpeg" alt="sorvete" />
                                                         <span class="disconto">-10%</span>
                                                         <div class="button-group">
                                                                 <span>
