Atualizar o Burgerking.html

--- a/Burgerking.html
+++ b/Burgerking.html
@@ -218,7 +218,7 @@ a:hover {
                                         
  <div class="card-product">
                                                 <div class="container-img">
-                                                        <img src="imagens/Choco shake.jpeg" alt="sorvete" />
+                                                        <img src="imagens/Choc shake.jpeg" alt="sorvete" />
                                                         <span class="disconto">-10%</span>
                                                         <div class="button-group">
                                                                 <span>
@@ -283,7 +283,7 @@ a:hover {
                                         
  <div class="card-product">
                                                 <div class="container-img">
-                                                        <img src="imagens/Choco shake.jpeg" alt="sorvete" />
+                                                        <img src="imagens/Choc shake.jpeg" alt="sorvete" />
                                                         <span class="disconto">-10%</span>
                                                         <div class="button-group">
                                                                 <span>
