Atualizar o carrinho.html

--- a/carrinho.html
+++ b/carrinho.html
@@ -69,14 +69,14 @@
               <tr>
                 <td>
                   <div class="product">
-                    <img src="https://picsum.photos/100/120" alt="" />
+                    <img src="imagens/Hamburguer.jpeg" alt="" />
                     <div class="info">
                       <div class="name">Nome do produto</div>
                       <div class="category">Categoria</div>
                     </div>
                   </div>
                 </td>
-                <td>R$ 120</td>
+                <td>R$ 50</td>
                 <td>
                   <div class="qty">
                     <button><i class="bx bx-minus"></i></button>
@@ -84,7 +84,7 @@
                     <button><i class="bx bx-plus"></i></button>
                   </div>
                 </td>
-                <td>R$ 240</td>
+                <td>R$ 50</td>
                 <td>
                   <button class="remove"><i class="bx bx-x"></i></button>
                 </td>
@@ -92,14 +92,14 @@
               <tr>
                 <td>
                   <div class="product">
-                    <img src="https://picsum.photos/100/120" alt="" />
+                    <img src="imagens/Hambgr 2.jpeg" alt="" />
                     <div class="info">
                       <div class="name">Nome do produto</div>
                       <div class="category">Categoria</div>
                     </div>
                   </div>
                 </td>
-                <td>R$ 120</td>
+                <td>R$ 50</td>
                 <td>
                   <div class="qty">
                     <button><i class="bx bx-minus"></i></button>
@@ -107,7 +107,7 @@
                     <button><i class="bx bx-plus"></i></button>
                   </div>
                 </td>
-                <td>R$ 240</td>
+                <td>R$ 50</td>
                 <td>
                   <button class="remove"><i class="bx bx-x"></i></button>
                 </td>
@@ -115,14 +115,14 @@
               <tr>
                 <td>
                   <div class="product">
-                    <img src="https://picsum.photos/100/120" alt="" />
+                    <img src="Sorvete chiquin.jpeg" alt="" />
                     <div class="info">
                       <div class="name">Nome do produto</div>
                       <div class="category">Categoria</div>
                     </div>
                   </div>
                 </td>
-                <td>R$ 120</td>
+                <td>R$ 50</td>
                 <td>
                   <div class="qty">
                     <button><i class="bx bx-minus"></i></button>
@@ -130,7 +130,7 @@
                     <button><i class="bx bx-plus"></i></button>
                   </div>
                 </td>
-                <td>R$ 240</td>
+                <td>R$ 50</td>
                 <td>
                   <button class="remove"><i class="bx bx-x"></i></button>
                 </td>
@@ -142,7 +142,7 @@
           <div class="box">
             <header>Resumo da compra</header>
             <div class="info">
-              <div><span>Sub-total</span><span>R$ 418</span></div>
+              <div><span>Sub-total</span><span>R$ 50</span></div>
               <div><span>Frete</span><span>Gratuito</span></div>
               <div>
                 <button>
@@ -153,7 +153,7 @@
             </div>
             <footer>
               <span>Total</span>
-              <span>R$ 418</span>
+              <span>R$ 150</span>
             </footer>
           </div>
           <button>Finalizar Compra</button>
