Atualizar o carrinho.html

--- a/carrinho.html
+++ b/carrinho.html
@@ -69,7 +69,7 @@
               <tr>
                 <td>
                   <div class="product">
-                    <img src="imagens/Hamburguer.jpeg" alt="" />
+                    <img src="imagen/Hamburguer.jpeg" alt="" />
                     <div class="info">
                       <div class="name">Nome do produto</div>
                       <div class="category">Categoria</div>
@@ -92,7 +92,7 @@
               <tr>
                 <td>
                   <div class="product">
-                    <img src="imagens/Hambgr 2.jpeg" alt="" />
+                    <img src="imagen/Hambgr 2.jpeg" alt="" />
                     <div class="info">
                       <div class="name">Nome do produto</div>
                       <div class="category">Categoria</div>
@@ -203,7 +203,7 @@
                                         </div>
 
                                         <div class="newsletter">
-                                          <a href=""  ><p class="title-footer">Quem somos nós?</p></a>
+                                          <a href="desnvolvedores.html"  ><p class="title-footer">Sobre nós</p></a>
 
 
 
