Atualizar o carrinho.html

--- a/carrinho.html
+++ b/carrinho.html
@@ -69,9 +69,9 @@
               <tr>
                 <td>
                   <div class="product">
-                    <img src="imagen/Hamburguer.jpeg" alt="" />
+                    <img src="imagens/Hamburguer.jpeg" alt="" />
                     <div class="info">
-                      <div class="name">Nome do produto</div>
+                      <div class="name">Whopper</div>
                       <div class="category">Categoria</div>
                     </div>
                   </div>
@@ -92,9 +92,9 @@
               <tr>
                 <td>
                   <div class="product">
-                    <img src="imagen/Hambgr 2.jpeg" alt="" />
+                    <img src="imagens/Hambgr 2.jpeg" alt="" />
                     <div class="info">
-                      <div class="name">Nome do produto</div>
+                      <div class="name">Chicken</div>
                       <div class="category">Categoria</div>
                     </div>
                   </div>
@@ -115,7 +115,7 @@
               <tr>
                 <td>
                   <div class="product">
-                    <img src="Sorvete chiquin.jpeg" alt="" />
+                    <img src="imagens/Sorvete chiquin.jpeg" alt="" />
                     <div class="info">
                       <div class="name">Nome do produto</div>
                       <div class="category">Categoria</div>
