Atualizar o doces.html

--- a/doces.html
+++ b/doces.html
@@ -193,13 +193,9 @@
                                         </div>
 
                                         <div class="newsletter">
-                                                <p class="title-footer">Quem somos nós?</p>
+                                                <a href="desenvolvedores.html><p class="title-footer">Sobre nós</p></a>
 
-                                                <div class="content">
-                                                        <p>
-                                                                Suscríbete a nuestros boletines ahora y mantente al
-                                                                día con nuevas colecciones y ofertas exclusivas.
-                                                        </p>
+                                                
                     
                                                 </div>
                                         </div>
