--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 
                                         <div class="container-logo">
                                                 
-                                                <i class="fa-solid fa-burger"></i>
+           
+<button onclick="toggleAudio()"><i class="fa-solid fa-burger">     </i></button>                                   
                                                 <h1 class="logo"><a href="/">Dle eats</a></h1>
                                         </div>
 
@@ -32,6 +33,10 @@
                                         </div>
                                 </div>
                         </div>
+<audio id="audio" style="display:none;">
+  <source src="VoicesAI_Gojo_DLE.__o_sabor_que_va_160631_0906.mp3"type="audio/mpeg">
+  
+</audio>
 
                         <div class="container-navbar">
                                 <nav class="navbar container">
@@ -314,6 +319,17 @@
                         src="https://kit.fontawesome.com/81581fb069.js"
                         crossorigin="anonymous"
                 ></script>
+
+<script>
+function toggleAudio() {
+  var audio = document.getElementById('audio');
+  if (audio.paused) {
+    audio.play();
+  } else {
+    audio.pause();
+  }
+}
+</script>
 
  <script>  
   document.addEventListener('DOMContentLoaded', function() {
