--- a/login.html
+++ b/login.html
@@ -55,7 +55,7 @@ body{
         <br><br>
         <button>Login</button>
         
-<button><a href="cadastrocliente.html"></a></button>
+<a href="cadastrocliente.html"> Não tem uma conta?</a>
 
     </div>
 </body>
