Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -294,9 +294,9 @@
                                         </div>
 
                                         <div class="newsletter">
-                                                <a href="desenvolvedores.html><p class="title-footer">Sobre nós?</p></a>
+                                                <a href="desenvolvedores.html"><p class="title-footer">Sobre nós?</p></a>
 
-<a href="cadastroempresa.html><p class="title-footer">Seja nosso parceiro</p></a>
+<a href="cadastroempresa.html"><p class="title-footer">Seja nosso parceiro</p></a>
 
                                                 <div class="content">
                                                             
