Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                                 </div>
                         </div>
 <audio id="audio" style="display:none;">
-  <source src="audio.aacc"type="audio/mpeg">
+  <source src="audio.aac"type="audio/mpeg">
   
 </audio>
 
