Atualizar o desenvolvedores.html

--- a/desenvolvedores.html
+++ b/desenvolvedores.html
@@ -111,23 +111,23 @@ main{
 
      <div class="container">
         <div class="person">
-            <img src="imagens/Arthur.jpg" alt="Arthur">
+            <img src="imagens/Arthur.jpeg" alt="Arthur">
             <h2>Arthur</h2>
         </div>
         <div class="person">
-            <img src="imagens/Fernanda.jpg" alt="Fernanda">
+            <img src="imagens/Fernanda.jpeg" alt="Fernanda">
             <h2>Fernanda</h2>
         </div>
         <div class="person">
-            <img src="imagens/Lara.jpg" alt="Pessoa 3">
+            <img src="imagens/Lara.jpeg" alt="Pessoa 3">
             <h2>Lara</h2>
         </div>
         <div class="person">
-            <img src="imagens/kaylane.jpg" alt="Pessoa 4">
+            <img src="imagens/Kayllane.jpeg" alt="Pessoa 4">
             <h2>Kaylane</h2>
         </div>
         <div class="person3">
-            <img src="imagens/juan.jpg" alt="Pessoa 5">
+            <img src="imagens/juan.jpeg" alt="Pessoa 5">
             <h2>Juan</h2>
         </div>
     </div>
