Atualizar o desenvolvedores.html

--- a/desenvolvedores.html
+++ b/desenvolvedores.html
@@ -127,7 +127,7 @@ main{
             <h2>Kaylane</h2>
         </div>
         <div class="person3">
-            <img src="imagens/juan.jpeg" alt="Pessoa 5">
+            <img src="imagens/Juan.jpeg" alt="Pessoa 5">
             <h2>Juan</h2>
         </div>
     </div>
