--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                                         <!-- Producto 1 -->
                                         <div class="card-product">
                                                 <div class="container-img">
-                                                        <img src="imagens/Hamburguer.jpeg" alt="whopper" />
+                                                        <a href="montep.html><img src="imagens/Hamburguer.jpeg" alt="whopper" /></a>
                                                         <span class="disconto">-13%</span>
                                                         <div class="button-group">
                                                                 <span>
