Atualizar o montep.html

--- a/montep.html
+++ b/montep.html
@@ -78,7 +78,7 @@ height:75;
     </style>
 </head>
 <body>
-<img src="Hamburguer.jpeg"/>
+<img src="Hamburguer.jpeg">
     <button class="popup-btn" onclick="togglePopup()">Monte seu Hamburger</button>
     <div id="popup" class="popup">
         <h2>Monte seu Hamburger</h2>
