--- a/carrinho.html
+++ b/carrinho.html
@@ -72,7 +72,7 @@
                     <img src="imagens/Hamburguer.jpeg" alt="" />
                     <div class="info">
                       <div class="name">Whopper</div>
-                      <div class="category">Categoria</div>
+                      <div class="category">Lanches</div>
                     </div>
                   </div>
                 </td>
@@ -95,7 +95,7 @@
                     <img src="imagens/Hambgr 2.jpeg" alt="" />
                     <div class="info">
                       <div class="name">Chicken</div>
-                      <div class="category">Categoria</div>
+                      <div class="category">Lanches</div>
                     </div>
                   </div>
                 </td>
@@ -117,8 +117,8 @@
                   <div class="product">
                     <img src="imagens/Sorvete chiquin.jpeg" alt="" />
                     <div class="info">
-                      <div class="name">Nome do produto</div>
-                      <div class="category">Categoria</div>
+                      <div class="name">Soverte bom</div>
+                      <div class="category">Doces</div>
                     </div>
                   </div>
                 </td>
