--- a/desenvolvedores.html
+++ b/desenvolvedores.html
@@ -21,12 +21,13 @@ h3{
 }
  
 main{
-  heigth: 100000px;
+  height: 800px;
 }
           
 .container {
     display: flex;
     flex-wrap: wrap;
+    margin-bottom: 300px;
 }
 
 .person {
@@ -133,7 +134,7 @@ main{
     </div>
 
 <br>
-<h3>Somos o TecnoArt, <br>um grupo de estudantes que desenvolveram um <br>projeto baseado no Ifood com modificações <br>e livre escolhas adequado a praticidade.🙅</h3>
+<h1>Somos o TecnoArt, <br>um grupo de estudantes que desenvolveram um <br>projeto baseado no Ifood com modificações <br>e livre escolhas adequado a praticidade.🙅</h1>
                                         
                         </section>
 
